Examples/test-suite/errors/cpp_template_argname.i
%module xxx

template<T> T blah(T x);





